profile update to address https://openjdk.java.net/jeps/403