@@ -1205,6 +1205,13 @@
                     --add-opens java.management/sun.management=ALL-UNNAMED
                     --add-exports java.xml/jdk.xml.internal=ALL-UNNAMED
                     --illegal-access=warn
+                    <!--Allow additional access as a workaround of https://openjdk.java.net/jeps/403  for JDK17 -->
+                    --add-opens java.base/java.util=ALL-UNNAMED
+                    --add-opens java.base/java.io=ALL-UNNAMED
+                    --add-opens java.base/java.net=ALL-UNNAMED
+                    --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                    --add-opens java.base/java.nio.channels.spi=ALL-UNNAMED
+                    --add-opens java.base/java.util.concurrent=ALL-UNNAMED
                 </javaModuleArgs>
             </properties>
             <modules>
